--- a/CPUSchedulingSimulator/.classpath
+++ b/CPUSchedulingSimulator/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry kind="lib" path="src/lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-simple-1.6.1.jar"/>
 	<classpathentry kind="lib" path="src/lib/xml-apis-1.0.b2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
